--- a/Agda.cabal
+++ b/Agda.cabal
@@ -55,6 +55,9 @@ data-files:         Agda.css
                     lib/prim/Agda/Builtin/Bool.agda
                     lib/prim/Agda/Builtin/Char.agda
                     lib/prim/Agda/Builtin/Coinduction.agda
+                    lib/prim/Agda/Builtin/Cubical/Path.agda
+                    lib/prim/Agda/Builtin/Cubical/Id.agda
+                    lib/prim/Agda/Builtin/Cubical/Sub.agda
                     lib/prim/Agda/Builtin/Equality.agda
                     lib/prim/Agda/Builtin/Float.agda
                     lib/prim/Agda/Builtin/FromNat.agda
