--- a/Agda.cabal
+++ b/Agda.cabal
@@ -361,6 +361,7 @@ library
                     Agda.TypeChecking.Free.Precompute
                     Agda.TypeChecking.Forcing
                     Agda.TypeChecking.Functions
+                    Agda.TypeChecking.Generalize
                     Agda.TypeChecking.Implicit
                     Agda.TypeChecking.Injectivity
                     Agda.TypeChecking.Inlining
