[ common tests, Makefile ] Improved `clean` rule.
(cherry picked from commit ebf6f536e85c0a0555031cf4e8c0ced7cbf583ab)

--- a/test/Common/Makefile
+++ b/test/Common/Makefile
@@ -30,6 +30,6 @@ cleanup = $(if $(call does_compile,$1),rm -rf MAlonzo $1,true)
 	@$(call cleanup,$*)
 
 clean :
-	-rm *~
+	@rm -f *~ *.agdai .*.agda.vim
 
 #EOF
