[ fixed #3159 ] By replacing `--no-default-libraries` by `--no-libraries`.

--- a/test/Common/Makefile
+++ b/test/Common/Makefile
@@ -18,7 +18,7 @@ alllagda=$(patsubst %.lagda,%.test,$(filter-out $(excluded),$(shell find . -name
 default : all
 all : $(allagda) $(alllagda)
 
-RUN_AGDA = $(AGDA_BIN) -i. -i.. --vim --ignore-interfaces --no-default-libraries -v$(V) -v impossible:10
+RUN_AGDA = $(AGDA_BIN) -i. -i.. --vim --ignore-interfaces --no-libraries -v$(V) -v impossible:10
 
 cleanup = $(if $(call does_compile,$1),rm -rf MAlonzo $1,true)
 
