[ #3159 ] Added missing replace.
Replaced `--no-default-libraries` by `--no-libraries`.

(cherry picked from commit 8f0c5d7ec9110c70203c1a61ab54e7db0316d50e)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -26,7 +26,7 @@ default : ac \
 
 agda = $(AGDA_BIN)
 
-run_agda = $(agda) -v0 --vim --ignore-interfaces --no-default-libraries
+run_agda = $(agda) -v0 --vim --ignore-interfaces --no-libraries
 
 other_files = AIM5/Hedberg/SET.agda \
               AIM5/yoshiki/SET.agda \
