[ #3159 ] Added missings `--no-default-libraries` option.
(cherry picked from commit 61ab774c8d7e2b6ded3354f7f3d96b1d3996799e)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -149,12 +149,12 @@ highlighting : syntax/highlighting/Test*agda
 .PHONY : malonzo
 malonzo : compiler/main.agda
 	@$(echo) "Testing the MAlonzo backend"
-	@$(agda) --ignore-interfaces --compile --compile-dir=compiler -icompiler $<
+	@$(agda) --ignore-interfaces --compile --compile-dir=compiler -icompiler --no-libraries $<
 	@./compiler/main
 				# Compilation works also if the code has already been type
 				# checked.
 	@rm -rf compiler/main compiler/MAlonzo
-	@$(agda) --compile --compile-dir=compiler -icompiler $<
+	@$(agda) --compile --compile-dir=compiler -icompiler --no-libraries $<
 	@./compiler/main
 	@$(echo) "ok"
 
@@ -162,11 +162,11 @@ malonzo : compiler/main.agda
 relocatable-interfaces : relocatable/originals/*.agda
 	-@rm -rf relocatable/copies
 	@$(echo) "Testing that interface files are relocatable"
-	@$(agda) --ignore-interfaces -irelocatable/originals relocatable/originals/C.agda
+	@$(agda) --ignore-interfaces -irelocatable/originals --no-libraries relocatable/originals/C.agda
 	@cp -pR relocatable/originals relocatable/copies
 	@echo "" >> relocatable/copies/B.agda
 				# Type checking succeeds...
-	@$(agda) -v2 -irelocatable/copies relocatable/copies/C.agda > relocatable/copies/output
+	@$(agda) -v2 -irelocatable/copies --no-libraries relocatable/copies/C.agda > relocatable/copies/output
 	@cat relocatable/copies/output
 				# ...and skips one of the modules (A).
 	@[ `grep "^ *Loading" relocatable/copies/output | wc -l` = 1 ]
@@ -176,11 +176,11 @@ relocatable-interfaces : relocatable/originals/*.agda
 malformed-interfaces : malformed/Empty.agda
 	@$(echo) "Testing that Agda can handle at least some malformed interface files."
 	@echo > malformed/Empty.agdai
-	@$(agda) -imalformed malformed/Empty.agda
+	@$(agda) -imalformed --no-libraries malformed/Empty.agda
 	-@openssl rand -out malformed/Empty.agdai 1024 2> /dev/null
-	@$(agda) -imalformed malformed/Empty.agda
+	@$(agda) -imalformed --no-libraries malformed/Empty.agda
 	@echo apa >> malformed/Empty.agdai
-	@$(agda) -imalformed malformed/Empty.agda
+	@$(agda) -imalformed --no-libraries malformed/Empty.agda
 
 .PHONY : html1
 html1 : AIM6/RegExp/talk/Everything.agda
