--- a/Agda.cabal
+++ b/Agda.cabal
@@ -515,6 +515,7 @@ library
 
   -- Initially, we disable all the warnings.
   ghc-options: -w
+               -Werror
 
   -- This option must be the first one after disabling the warnings. See
   -- Issue #2094.
@@ -566,6 +567,8 @@ library
                  -- -Wmissing-home-modules
                  -Wsimplifiable-class-constraints
                  -Wunbanged-strict-patterns
+
+  ghc-prof-options: -fprof-auto
 
   default-language: Haskell2010
   default-extensions: ConstraintKinds
@@ -745,6 +748,7 @@ test-suite agda-tests
   -- Initially, we disable all the warnings.
   ghc-options: -threaded
                -w
+               -Werror
 
   -- This option must be the first one after disabling the warnings. See
   -- Issue #2094.
