--- a/Agda.cabal
+++ b/Agda.cabal
@@ -131,7 +131,8 @@ library
   if os(windows)
     build-depends:  Win32 >= 2.3.1.0 && < 2.7
 
-  build-depends:  array >= 0.5.1.0 && < 0.6
+  build-depends:  aeson >= 1.3 && < 2.0
+                , array >= 0.5.1.0 && < 0.6
                 , async >= 2.2 && < 2.3
                 , base >= 4.8.0.0 && < 4.13
                 , binary >= 0.7.3.0 && < 0.9
