[ JSON ] Agda.Interaction.Highlighting.Common
Refactoring common codes out from `Agda.Interaction.Highlighting.Emacs`
and `Agda.Interaction.Highlighting.JSON`.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -255,6 +255,7 @@ library
                     Agda.Interaction.EmacsTop
                     Agda.Interaction.JSONTop
                     Agda.Interaction.FindFile
+                    Agda.Interaction.Highlighting.Common
                     Agda.Interaction.Highlighting.Dot
                     Agda.Interaction.Highlighting.Emacs
                     Agda.Interaction.Highlighting.Generate
