--- a/Agda.cabal
+++ b/Agda.cabal
@@ -268,6 +268,7 @@ library
                     Agda.Interaction.Highlighting.LaTeX
                     Agda.Interaction.Imports
                     Agda.Interaction.InteractionTop
+                    Agda.Interaction.JSON.Encoding
                     Agda.Interaction.Response
                     Agda.Interaction.MakeCase
                     Agda.Interaction.Monad
