[ json ] Refactoring instances of EncodeTCM

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -177,6 +177,7 @@ library
                 , time >= 1.5.0.1 && < 1.9
                 , unordered-containers >= 0.2.5.0 && < 0.3
                 , uri-encode >= 1.5.0.4 && < 1.6
+                , vector >= 0.11.0.0 && < 0.13
 
   -- In hTags the mtl library must be compiled with the version of
   -- transformers shipped with GHC, so we use that version in Agda (see,
@@ -270,6 +271,7 @@ library
                     Agda.Interaction.InteractionTop
                     Agda.Interaction.JSON.Encode
                     Agda.Interaction.JSON.Syntax.Abstract
+                    Agda.Interaction.JSON.Syntax.Abstract.Name
                     Agda.Interaction.JSON.Syntax.Common
                     Agda.Interaction.JSON.Syntax.Concrete
                     Agda.Interaction.JSON.Syntax.Concrete.Name
@@ -279,9 +281,9 @@ library
                     Agda.Interaction.JSON.Syntax.Notation
                     Agda.Interaction.JSON.Syntax.Parser
                     Agda.Interaction.JSON.Syntax.Position
+                    Agda.Interaction.JSON.Syntax.Translation
                     Agda.Interaction.JSON.TypeChecking
                     Agda.Interaction.JSON.TypeChecking.Positivity
-                    Agda.Interaction.JSON.Utils
                     Agda.Interaction.Response
                     Agda.Interaction.MakeCase
                     Agda.Interaction.Monad
