--- a/Agda.cabal
+++ b/Agda.cabal
@@ -188,10 +188,8 @@ library
     build-depends: zlib >= 0.4.0.1 && < 0.7
 
   if impl(ghc < 8.0)
-    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API
-    -- for pre-GHC8
-    build-depends:  fail == 4.9.*
-                  , semigroups == 0.18.*
+    -- provide/emulate `Data.Semigroups` API for pre-GHC8
+    build-depends:  semigroups == 0.18.*
 
   -- We don't write upper bounds for Alex nor Happy because the
   -- `build-tools` field can not be modified in Hackage. Agda doesn't
@@ -573,6 +571,7 @@ library
   ghc-prof-options: -fprof-auto
 
   default-language: Haskell2010
+
   default-extensions: ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
