--- a/.travis.yml
+++ b/.travis.yml
@@ -356,15 +356,8 @@ script:
        make BUILD_DIR=$BUILD_DIR benchmark-without-logs;
     fi
 
-# 2016-04-15: The option `AGDA_TESTS_OPTIONS="-j${PARALLEL_TESTS}"` doesn't work
-# with the `compiler-test`.
-
   - if [[ $TEST = "MAIN" ]]; then
-       if [[ $GHC_VER = "8.0.2" ]]; then
-          travis_wait make AGDA_TESTS_OPTIONS="--hide-successes" BUILD_DIR=$BUILD_DIR compiler-test;
-       else
-          make AGDA_TESTS_OPTIONS="--hide-successes" BUILD_DIR=$BUILD_DIR compiler-test;
-       fi
+       make AGDA_TESTS_OPTIONS="-j${PARALLEL_TESTS} --hide-successes" BUILD_DIR=$BUILD_DIR compiler-test;
     fi
 
   - if [[ $TEST = "MAIN" ]]; then
