[ #3160 ] Tested some programs with GHC 8.6.1.
The programs supported were:
* agda-bisect
* fix-agda-whitespace
* size-solver

--- a/src/agda-bisect/agda-bisect.cabal
+++ b/src/agda-bisect/agda-bisect.cabal
@@ -8,11 +8,12 @@ tested-with: GHC == 7.10.3
              GHC == 8.0.2
              GHC == 8.2.2
              GHC == 8.4.2
+             GHC == 8.6.1
 
 executable agda-bisect
   main-is:          Bisect.hs
   build-depends:      ansi-wl-pprint >= 0.6.7.3 && < 0.7
-                    , base >= 4.8.2.0 && < 4.12
+                    , base >= 4.8.2.0 && < 4.13
                     , directory >= 1.2.2.0 && < 1.4
                     , optparse-applicative >= 0.13 && < 0.15
                     , process >= 1.2.3.0 && < 1.7
