--- a/src/fix-agda-whitespace/fix-agda-whitespace.cabal
+++ b/src/fix-agda-whitespace/fix-agda-whitespace.cabal
@@ -7,12 +7,13 @@ tested-with:     GHC == 7.10.3
                  GHC == 8.0.2
                  GHC == 8.2.2
                  GHC == 8.4.3
+                 GHC == 8.6.1
 
 executable fix-agda-whitespace
   hs-source-dirs:   .
   main-is:          FixWhitespace.hs
 
-  build-depends:  base >= 4.8.2.0 && < 4.12
+  build-depends:  base >= 4.8.2.0 && < 4.13
                 , directory >= 1.2.2.0 && < 1.4
                 , filemanip >= 0.3.6.2 && < 0.4
                 , filepath >= 1.4.0.0 && < 1.5
