--- a/src/size-solver/size-solver.cabal
+++ b/src/size-solver/size-solver.cabal
@@ -16,6 +16,7 @@ tested-with: GHC == 7.10.3
              GHC == 8.0.2
              GHC == 8.2.1
              GHC == 8.4.1
+             GHC == 8.6.1
 
 -- extra-source-files: src/full/undefined.h
 --                     README.md
@@ -36,7 +37,7 @@ executable size-solver
   build-depends:
     Agda == 2.6.0
     , base >= 4.8.2.0 && < 6
-    , containers >= 0.5.6.2 && < 0.6
+    , containers >= 0.5.6.2 && < 0.7
     , mtl >= 2.2.1 && < 2.3
     , parsec >= 3.1 && < 3.2
   other-modules:
