[ #3223, #3228 ] Using `cpp` instead of `cpphs` as the default preprocessor.
(cherry picked from commit c27af0d57815514d6e98e1f02afb249b383de5d0)

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -86,7 +86,7 @@ source-repository this
   tag:      v2.5.4.1.20180922
 
 flag cpphs
-  default:     True
+  default:     False
   manual:      True
   description: Use cpphs instead of cpp.
 
