--- a/stack-7.10.3.yaml
+++ b/stack-7.10.3.yaml
@@ -1,3 +1,6 @@
+# The version installed of `cpphs` should match the lower version
+# required in Agda.cabal [Issue #2315].
+
 resolver: lts-6.35
 
 extra-deps:
