--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ install:
   - cabal --version
   - ghc --version
   - cabal update
+  - cabal install cpphs-1.20.8
   - cabal install alex happy
   - cabal install --only-dependencies
   - cabal install
