--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -7,12 +7,13 @@ tested-with: GHC == 7.10.3
              GHC == 8.0.2
              GHC == 8.2.2
              GHC == 8.4.3
+             GHC == 8.6.1
 
 executable hTags
   main-is: Main.hs
   other-modules: Tags
 
-  build-depends:  base >= 4.8.2.0 && < 4.12
+  build-depends:  base >= 4.8.2.0 && < 4.13
                 -- Most APIs we use are unchanged since 1.10, except for
                 -- Exception in Language.Haskell.Extension. Compare:
                 -- http://hackage.haskell.org/package/Cabal-1.10.2.0/docs/Language-Haskell-Extension.html
@@ -20,11 +21,11 @@ executable hTags
                 --
                 -- We must still support 1.22.5.0 since GHC 7.10.3 was
                 -- built using this version.
-                , Cabal >= 1.22.5.0  && < 2.3
-                , containers >= 0.5.6.2 && < 0.6
+                , Cabal >= 1.22.5.0  && < 2.5
+                , containers >= 0.5.6.2 && < 0.7
                 , directory >= 1.2.2.0 && < 1.4
                 , filepath >= 1.4.0.0 && < 1.5
-                , ghc >= 7.10.3 && < 8.5
+                , ghc >= 7.10.3 && < 8.7
                 , mtl >= 2.2.1 && < 2.3
                 , process >= 1.2.3.0 && < 1.7
                 , strict >= 0.3.2 && < 0.4
