[ #3160 ] Added CHANGELOG entry and updated `tested-with` field.
[ci skip]

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -37,6 +37,7 @@ tested-with:        GHC == 7.10.3
                     GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.3
+                    GHC == 8.6.1
 extra-source-files: CHANGELOG.md
                     README.md
                     doc/user-manual.pdf
