--- a/src/closed-issues/closed-issues-for-milestone.cabal
+++ b/src/closed-issues/closed-issues-for-milestone.cabal
@@ -20,6 +20,12 @@ executable closed-issues-for-milestone
   build-depends:  base       >= 4.7.0.2  && < 4.12
                 , bytestring >= 0.10.4.0 && < 0.11
                 , github     >= 0.16     && < 0.20
-                , text       >= 1.2.1.0  && < 1.3
+
+  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
+  -- 8.4.3. See Issue #3277.
+  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
+    build-depends: text >= 1.2.3.0 && < 1.3
+  else
+    build-depends: text >= 1.2.3.1 && < 1.3
 
   ghc-options: -Werror
