--- a/stack-7.10.3.yaml
+++ b/stack-7.10.3.yaml
@@ -9,6 +9,7 @@ extra-deps:
 - equivalence-0.3.2
 - async-2.2.1
 - gitrev-1.3.1
+- text-1.2.3.1
 
 # Local packages, usually specified by relative directory name
 packages:
