--- a/stack-8.0.2.yaml
+++ b/stack-8.0.2.yaml
@@ -2,6 +2,7 @@ resolver: lts-9.21
 
 extra-deps:
 - async-2.2.1
+- text-1.2.3.1
 
 # Local packages, usually specified by relative directory name
 packages:
