--- a/Agda.cabal
+++ b/Agda.cabal
@@ -176,7 +176,6 @@ library
                 , stm >= 2.4.4 && < 2.6
                 , strict >= 0.3.2 && < 0.4
                 , template-haskell >= 2.10.0.0 && < 2.15
-                , text >= 1.2.1.0 && < 1.3
                 , time >= 1.5.0.1 && < 1.9
                 , unordered-containers >= 0.2.5.0 && < 0.3
                 , uri-encode >= 1.5.0.4 && < 1.6
@@ -186,6 +185,13 @@ library
   -- for example, Issue 2983).
   if impl(ghc >= 8.4)
     build-depends: transformers == 0.5.5.0
+
+  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
+  -- 8.4.3. See Issue #3277.
+  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
+    build-depends: text >= 1.2.3.0 && < 1.3
+  else
+    build-depends: text >= 1.2.3.1 && < 1.3
 
   if impl(ghc >= 8.0) && impl(ghc < 8.4)
     build-depends: transformers == 0.5.2.0
@@ -732,9 +738,15 @@ test-suite agda-tests
                 , tasty-quickcheck >= 0.9.2 && < 0.11
                 , tasty-silver >= 3.1.8 && < 3.2
                 , temporary >= 1.2.0.3 && < 1.4
-                , text >= 1.2.1.0 && < 1.3
                 , unix-compat >= 0.4.3.1 && < 0.6
                 , uri-encode >= 1.5.0.4 && < 1.6
+
+  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
+  -- 8.4.3. See Issue #3277.
+  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
+    build-depends: text >= 1.2.3.0 && < 1.3
+  else
+    build-depends: text >= 1.2.3.1 && < 1.3
 
   if impl(ghc < 8.0)
     -- provide/emulate `Data.Semigroups` API for pre-GHC8
