--- a/src/fix-agda-whitespace/fix-agda-whitespace.cabal
+++ b/src/fix-agda-whitespace/fix-agda-whitespace.cabal
@@ -17,4 +17,10 @@ executable fix-agda-whitespace
                 , directory >= 1.2.2.0 && < 1.4
                 , filemanip >= 0.3.6.2 && < 0.4
                 , filepath >= 1.4.0.0 && < 1.5
-                , text >= 1.2.1.0 && < 1.3
+
+  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
+  -- 8.4.3. See Issue #3277.
+  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
+    build-depends: text >= 1.2.3.0 && < 1.3
+  else
+    build-depends: text >= 1.2.3.1 && < 1.3
