--- a/Agda.cabal
+++ b/Agda.cabal
@@ -46,6 +46,7 @@ extra-source-files: CHANGELOG.md
                     stack-8.0.2.yaml
                     stack-8.2.2.yaml
                     stack-8.4.4.yaml
+                    stack-8.6.1.yaml
 
 data-dir:           src/data
 data-files:         Agda.css
