[ #3266 ] added test 'examples/uptodate'

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -22,6 +22,7 @@ default : ac \
           regexp-talk \
           relocatable-interfaces \
           simplelib \
+          uptodate \
           view \
 
 agda = $(AGDA_BIN)
@@ -171,6 +172,14 @@ relocatable-interfaces : relocatable/originals/*.agda
 				# ...and skips one of the modules (A).
 	@[ `grep "^ *Loading" relocatable/copies/output | wc -l` = 1 ]
 	@rm -rf relocatable/copies
+
+.PHONY : uptodate
+uptodate : uptodate/*.agda
+	@$(echo) "Testing that already imported modules are up-to-date" # despite having DOS line-endings
+	@$(agda) -v5 --ignore-interfaces -iuptodate --no-libraries uptodate/A.agda > uptodate/output
+	@cat uptodate/output
+	@[ `grep "C is up-to-date" uptodate/output | wc -l` = 1 ]
+	@rm -f uptodate/output
 
 .PHONY : malformed-interfaces
 malformed-interfaces : malformed/Empty.agda
