--- a/Agda.cabal
+++ b/Agda.cabal
@@ -60,6 +60,7 @@ data-files:         Agda.css
                     lib/prim/Agda/Builtin/Cubical/Id.agda
                     lib/prim/Agda/Builtin/Cubical/Sub.agda
                     lib/prim/Agda/Builtin/Equality.agda
+                    lib/prim/Agda/Builtin/Erase.agda
                     lib/prim/Agda/Builtin/Float.agda
                     lib/prim/Agda/Builtin/FromNat.agda
                     lib/prim/Agda/Builtin/FromNeg.agda
