--- a/Agda.cabal
+++ b/Agda.cabal
@@ -87,6 +87,11 @@ source-repository head
   type:     git
   location: https://github.com/agda/agda.git
 
+source-repository this
+  type:     git
+  location: https://github.com/agda/agda.git
+  tag:      v2.6.0
+
 flag cpphs
   default:     False
   manual:      True
