[ #3313 ] Implement new command line flag `--html-highlight=[code,all]`, add `split` as a new dependency
Signed-off-by: ice1000 <ice1000kotlin@foxmail.com>

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -186,6 +186,7 @@ library
                 , time >= 1.5.0.1 && < 1.9
                 , unordered-containers >= 0.2.5.0 && < 0.3
                 , uri-encode >= 1.5.0.4 && < 1.6
+                , split >= 0.2.0.0 && < 0.2.3.4
 
   -- In hTags the mtl library must be compiled with the version of
   -- transformers shipped with GHC, so we use that version in Agda (see,
