[ builtin ] refactor: move builtin names to separate module
avoids a boot file

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -306,6 +306,7 @@ library
                     Agda.Syntax.Abstract.Pretty
                     Agda.Syntax.Abstract.Views
                     Agda.Syntax.Abstract
+                    Agda.Syntax.Builtin
                     Agda.Syntax.Common
                     Agda.Syntax.Concrete.Attribute
                     Agda.Syntax.Concrete.Definitions
