[ agda-bisect ] Scripts are now given absolute paths to Agda.
This does not apply to paths given using --dry-run.

--- a/src/agda-bisect/agda-bisect.cabal
+++ b/src/agda-bisect/agda-bisect.cabal
@@ -15,6 +15,7 @@ executable agda-bisect
   build-depends:      ansi-wl-pprint >= 0.6.7.3 && < 0.7
                     , base >= 4.8.2.0 && < 4.13
                     , directory >= 1.2.2.0 && < 1.4
+                    , filepath == 1.4.*
                     , optparse-applicative >= 0.13 && < 0.15
                     , process >= 1.2.3.0 && < 1.7
                     , time >= 1.5.0.1 && < 1.9
