[ cubical #3318 ] Removed unused primitives and bound the others
primComp now computes using primHComp and primTransp.

This allowed the removal of COMPGLUE and primPFrom1.

The PushOut primitives are also removed, given the support for HITs.

The new Agda.Builtin.Cubical.Glue binds Glue and the related prims.

Agda.Builtin.Cubical.Id now binds primIdElim.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -60,6 +60,7 @@ data-files:         Agda.css
                     lib/prim/Agda/Builtin/Cubical/Path.agda
                     lib/prim/Agda/Builtin/Cubical/Id.agda
                     lib/prim/Agda/Builtin/Cubical/Sub.agda
+                    lib/prim/Agda/Builtin/Cubical/Glue.agda
                     lib/prim/Agda/Builtin/Equality.agda
                     lib/prim/Agda/Builtin/Equality/Erase.agda
                     lib/prim/Agda/Builtin/Equality/Rewrite.agda
